--- a/tomcat.yml
+++ b/tomcat.yml
@@ -1,5 +1,6 @@
 ---
 - name: Prueba para parar tomcat
+  hosts: 192.168.1.38
   tasks:
     - name: Parar tomcat en windows
       ansible.windows.win_shell:
