--- a/tomcat.yml
+++ b/tomcat.yml
@@ -3,8 +3,10 @@
   hosts: 192.168.1.38
   tasks:
     - name: Parar tomcat en windows
-      ansible.windows.win_shell:
-        exectuable: c:\script\controlm\refrendollamadas\0017_REFRENDOLLAMADAS_TOMCAT
+      win_shell:
+      args:
+      
+        exectuable: c:\script\controlm\refrendollamadas\0017_REFRENDOLLAMADAS_TOMCAT.cmd
       
 
 
