--- a/tomcat.yml
+++ b/tomcat.yml
@@ -3,7 +3,7 @@
   hosts: 192.168.1.38
   tasks:
     - name: Parar tomcat en windows
-      win_command: c:\script\controlm\refrendollamadas\0017_REFRENDOLLAMADAS_TOMCAT.cmd
+      win_command: C:\scripts\controlm\refrendollamadas\0017_REFRENDOLLAMADAS_TOMCAT.cmd
       
 
 
