Parar servicio con win_service

--- a/tomcat.yml
+++ b/tomcat.yml
@@ -4,6 +4,11 @@
   tasks:
     - name: Parar tomcat en windows
       win_command: C:\scripts\controlm\refrendollamadas\0017_REFRENDOLLAMADAS_TOMCAT.cmd
-      
+
+    - name: Parar servicio
+
+      win_service:
+        name: Tomcat9
+        state: stopped
 
 
