--- a/envio_mail.yml
+++ b/envio_mail.yml
@@ -8,11 +8,14 @@
       mail:
         host: smtp.gmail.com
         port: 587
-        username: dherranzb@gmail.com
-        password: Mion@973laea9
+        secure: starttls
+        charset: utf-8
+        sender: dherranzb@gmail.com
+        username: dherranzb
+        password: etsfimcttnplvgca 
         to: dherranzb@gmail.com
         subject: "Esto es una prueba"
         body: "Esto ha salido de puta madre"
-      delgate_to: localhost
+      delegate_to: localhost
 
       when: notificar == "mail"
