--- a/envio_mail.yml
+++ b/envio_mail.yml
@@ -19,3 +19,14 @@
       delegate_to: localhost
 
       when: notificar == "mail"
+    
+    - name: Enviar sms
+      pip: 
+        name: pushbullet.py 
+      when: notificar == "pushbullet"
+
+      pushbullet:
+        api_key: "o.kxmDD4HHFwHLRMmR9xp4nqzdlwaohdaQ"
+        device: "android"
+        title: "notificacion"
+        when: notificar == "pushbullet"
