--- a/envio_mail.yml
+++ b/envio_mail.yml
@@ -20,13 +20,14 @@
 
       when: notificar == "mail"
     
-    - name: Enviar sms
+    - name: Instalar pushbullet
       pip: 
         name: pushbullet.py 
       when: notificar == "pushbullet"
 
+    - name: Enviar sms
       pushbullet:
         api_key: "o.kxmDD4HHFwHLRMmR9xp4nqzdlwaohdaQ"
         device: "android"
         title: "notificacion"
-        when: notificar == "pushbullet"
+       when: notificar == "pushbullet"
