--- a/install_process.yml
+++ b/install_process.yml
@@ -1,6 +1,6 @@
 ---
 - name: Instalacion en windows de process explorer
-  hosts: ESSEATMASV666
+  hosts: windows
   tasks:
           - name: Instala_process_explorer
             win_chocolatey:
