--- a/grafana.yml
+++ b/grafana.yml
@@ -18,8 +18,29 @@
         state:      present
         enabled:    yes
 
+
+    - name: Find Grafana
+      win_find:
+        patterns: 'grafana-server.exe'
+        paths: 'C:\ProgramData\chocolatey\lib\grafana'
+        recurse: yes
+      reguster: _
+
+    - name: Install NSSM
+      win_chocolatey:
+        name: "nssm"
+        state: present
+
+    - name: Create Service for Grafana
+      tags: "service"
+      win_nssm:
+        name: "grafana-server"
+        application: '{{_.files[0].path}}'
+
     - name: Activate Grafana Service
       win_service:
-        name: "grafana_servie"
+        name: "grafana_server"
+        description: "Grafana server"
+        dependencies: [ "Tcpip"]
         state: started
         start_mode: auto
