--- a/tomcat.yml
+++ b/tomcat.yml
@@ -4,6 +4,8 @@
   tasks:
     - name: Parar tomcat en windows
       win_command: C:\scripts\controlm\refrendollamadas\0017_REFRENDOLLAMADAS_TOMCAT.cmd
+      tags: [ "con_script" ]
+    
 
     - name: Parar servicio
 
