Se añaden mensajes de seguimiento

--- a/tomcat.yml
+++ b/tomcat.yml
@@ -1,9 +1,13 @@
 ---
 - name: Prueba para parar tomcat
   hosts: Windows
+  vars:
+    servicio= "Tomcat"
   tasks:
     - name: Parar tomcat en windows
       win_command: C:\scripts\controlm\refrendollamadas\0017_REFRENDOLLAMADAS_TOMCAT.cmd
+      debug: 
+        msg: "Se utiliza el tag"
       tags: [ "con_script" ]
     
 
@@ -12,11 +16,15 @@
       win_service:
         name: Tomcat9
         state: stopped
+      debug:
+        msg: "Se para el sericio {{ servicio }}"
     
     - name: Arrancar servicio
       
       win_service:
         name: Tomcat9
         state: started
+      debug:
+        msg: "Se inicia el servicio {{ servicio }} "
 
 
