--- a/tomcat.yml
+++ b/tomcat.yml
@@ -18,7 +18,7 @@
 
       register: parada
       debug:
-        msg: "{{ parada.state }}"
+        msg: "Estado: {{ parada.state }}"
     
     - name: Arrancar servicio
       
