--- a/tomcat.yml
+++ b/tomcat.yml
@@ -34,15 +34,43 @@
         tags: [ "arranque" ]
 
       - name: Envia Correo ok
-        debug:
-          msg: "Correo ok"
+        mail:
+          host: smtp.gmail.com
+          port: 587
+          secure: starttls
+          charset: utf-8
+          sender: dherranzb@gmail.com
+          username: dherranzb
+          password: "{{password}}"
+          to: dherranzb@gmail.com
+          subject: "Reinicio Refrendo Llamadas"
+          body: " Servicio {{ parada.display_name }} ha reiniciado satisfactoriamente"
+
+        delegate_to: localhost
+
+        #debug:
+        # msg: "Correo ok"
 
 
       rescue:
 
-        - name: Envia corro NO OK
-          debug:
-            msg: "Correo KO"      
+      - name: Envia correo NO OK
+          # - name: Envia mail desde google
+        mail:
+          host: smtp.gmail.com
+          port: 587
+          secure: starttls
+          charset: utf-8
+          sender: dherranzb@gmail.com
+          username: dherranzb
+          password: "{{password}}"
+          to: dherranzb@gmail.com
+          subject: "Error: El servicio no ha parado"
+          body: "Error: {{ parada.msg }}"
+
+        delegate_to: localhost
+        #        debug:
+        #   msg: "Correo KO"      
 
 
     
