--- a/tomcat.yml
+++ b/tomcat.yml
@@ -1,7 +1,7 @@
 ---
 - name: Prueba para parar tomcat
   hosts: Windows
-  gather_facts: false
+  gather_facts: false 
   tasks:
 
     - block:
@@ -33,15 +33,18 @@
           msg: "{{ arranque.display_name }} {{ arranque.state }}"
         tags: [ "arranque" ]
 
-      - name: Envia Correo ok
-        include: envio_correo.yml
-        
-
+        # - name: Envia Correo ok
+        #include: envio_correo.yml
+        #debug: msg="Correo Ok"
+      - import_tasks: "envio_correo.yml"
 
       rescue:
 
-      - name: Envia correo NO OK
-        include: envio_correo.yml
+              # - name: Envia correo NO OK
+        #  include: envio_correo.yml
+        #  debug: msg="Correo KO"
+      - import_tasks: "envio_correo.yml"
+
         
 
     
